Filling the requirements

--- a/index.html
+++ b/index.html
@@ -19,17 +19,22 @@
     <main>
         <img id="minha_foto" src="Profile-cut.png" alt="Foto do perfil de Pedro Castro">
         <article id="meu_artigo" class="lado-esquerdo">
-            <p>No último dia 9 de novembro iniciamos eu, junto a mais 132 colegas de turma, nossa aventura no fantástico
-                mundo da <strong>Trybe</strong>. Poderia dizer no mundo da programação, mas a essa escola é muito mais
-                do que aprender a
-                programar, onde a abordagem ao lado das <em>soft-skills</em> é tão importante quanto a atenção dada aos
-                quesitos
-                técnicos - e olha que não é pouco conhecimento compartilhado!</p>
-            <p>As primeiras impressões estão sendo
-                maravilhosas, e sigo certo no sucesso ao longo de toda a jornada, como estudante Trybe e
-                depois no mercado de trabalho! #VQV #goTrybe</p>
+            No último dia 9 de novembro iniciamos eu, junto a mais 132 colegas de turma, nossa aventura no fantástico
+            mundo da <strong>Trybe</strong>. Poderia dizer no mundo da programação, mas a essa escola é muito mais
+            do que aprender a
+            programar, onde a abordagem ao lado das <em>soft-skills</em> é tão importante quanto a atenção dada aos
+            quesitos
+            técnicos - e olha que não é pouco conhecimento compartilhado!
+            As primeiras impressões estão sendo
+            maravilhosas, e sigo certo no sucesso ao longo de toda a jornada, como estudante Trybe e
+            depois no mercado de trabalho! #VQV #goTrybe
         </article>
-        <section id="lado-direito"></section>
+        <section id="lado-direito">
+            <aside>Admito que num primeiro contato com pessoas estranhas eu me sinto um pouco desconfortável. Mas as
+                dinâmicas que a equipe Trybe tem nos proposto nessas primeiras semanas fluíram de forma tão natural que
+                me
+                senti muito tranquilo ao relacionar com algumas das pessoas estudantes nessas atividades!</aside>
+        </section>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Bash</li>
@@ -54,9 +59,7 @@
             <li>Ciência da Computação</li>
             <li>Introdução a Python</li>
         </ul>
-        <aside>Admito que num primeiro contato com pessoas estranhas eu me sinto um pouco desconfortável. Mas as
-            dinâmicas que a equipe Trybe tem nos proposto nessas primeiras semanas fluíram de forma tão natural que me
-            senti muito tranquilo ao relacionar com algumas das pessoas estudantes nessas atividades!</aside>
+
     </main>
     <footer id="rodape">
 
