--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-        <nav><a id="about" href="https://mztbtg.github.io/" target="_blank">Sobre mim</a></nav>
     </header>
 
     <aside id="left_side_screen">
@@ -32,13 +31,22 @@
                 <td>Palavras 3</td>
             </tr>
         </table>
+
         <div id="Learn-history">
             <h3>Uma passagem sobre meu aprendizado</h3>
-            <p>git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"</p>
+            <p> git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"</p>
         </div>
     </aside>
 
     <main>
+        <article>
+            <h3>Como entrei na trybe</h3>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minha participação no processo seletivo da Trybe foi um tanto quanto por acaso. Conheci eles após assistir o anúncio no canal <a href="https://www.youtube.com/user/Diolinux" target="_blank">DioLinux</a>. Li o anúncio principal do site, e isso me deixou com um certo medo por conta do pensamento "é bom demais pra ser verdade". Destrinchei o site todo procurando por furadas e tudo estava batendo. Fiquei tão animado que fiz minha inscrição e dei inicio ao processo de seleção com tudo, me preparando durante todos os dias, sem exceção, de uma forma tão intença que finalizei o teste final em poucos minutos. Realizei a entrevista e me senti tão confortável com nossa conversa que fiquei extremamente ansioso pelo inicio das aulas! Criei espectativas que foram ultrapassadas desde o primeiro dia até hoje!</p>
+            <br>
+            <h3>Nossa rotina</h3>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        </article>
+
         <div id="learning">
             <ol id="licoes_aprendidas">
                 <h3>Lições aprendidas</h3>
@@ -67,20 +75,14 @@
                 <li>MongoDB</li>
             </ul>
         </div>
-        <article>
-            <h3>Como entrei na trybe</h3>
-            <p>TEXTAUM(30 0letras300letras300l etras300letra s300letras300letras)</p>
-            <br>
-            <h3>Nossa rotina</h3>
-            <p>TEXTAUM (300 letras300letras300le tras300letras300let ras300l etras300letras300letras3 00letras300 letras300letras 300letras300 letras300 letras 300letras300letras 300letras 300letra s300letras300letras300l etras300let ras300letras300letr as300letras300letras300let ras300letras300letra s300letras300letr as300letra s300letras300l etras300letras300letras300letras300letr as300letras300 letras300l etras300letras300 letras300l etras300letr as300letras300letras)</p>
-        </article>
     </main>
 
-    <footer id="rodape">
-
+    <footer id="rodape">Copyright 2020-2020 by Bachini, Willian. All Rights Reserved. &copy;
+        <p>
+            <nav><span>Conheça mais sobre mim <a id="about" href="https://mztbtg.github.io/" target="_blank">clicando aqui</a>!</span></nav>
+        </p>
     </footer>
 
 </body>
 
 </html>
-
