--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
 
     <main>
         <img id="minha_foto" src="minha-foto.jpg" alt=" foto Renato github">
+        <ol id="licoes_aprendidas">
+            <li>Soft Skills</li>
+            <li>Unix & Bash</li>
+            <li>Linkedin</li>
+            <li>ZOOM</li>
+            <li>Fundamentos da WEB</li>
+            <li>Git</li>
+            <li>Github</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>DOM</li>
+            <li>Web Storage</li>
+            <li>Forms</li>
+            <li>FlexBox</li>
+            <li>JavaScript ES6</li>
+            <li>Testes Unitários</li>
+            <li>Testes automatizados com Jest</li>
+            <li>Introdução à React</li>
+            <li>Eventos e Formulários com React</li>
+            <li>React Router</li>
+        </ul>
     </main>
 
 </body>
