Conserto de alguns itens

--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <a name="home"></a>
     <header id="cabecalho">
         <h1 id="titulo">Apresentação</h1>
         <nav>
             <span>
-                Home
-            </span>
+                <a href="#home">
+                    Home
+                </a>
+                </span>
             <span>
-                Contato
+                <a href="#contato">
+                    Contato
+                </a>
             </span>
         </nav>
     </header>
-    <img id="minha_foto" src="sabrina.jpg" alt="Uma foto minha"/>
+    <img id="minha_foto" src="Foto de Sabrina.jpg" alt="Uma foto minha"/>
     <div class="listas">
         <table>
             <tr>
-                <td >Lições aprendidas</td>
-                <td >Lições a aprender</td>
+                <td class="ap" >Lições aprendidas</td>
+                <td class="ap">Lições a aprender</td>
             </tr>
             <tr>  
                 <td>    
@@ -66,16 +71,16 @@
         <section class="lado-direito">
             <aside>
                 Em três semanas de estudo na Trybe, consegui aprender conteúdos, que demorei meses para aprender em outros cursos.
-                Mesmo com 11 meses e 1 semana, para comgit a minha formação, posso dizer que essa foi uma das melhores decisões
+                Mesmo com 11 meses e 1 semana, para a minha formação, posso dizer que essa foi uma das melhores decisões
                 que já fiz.
             </aside>
         </section>
     </div>
 
     <footer id="rodape">
-            <a class="ft" href="https://www.linkedin.com/in/sabrina-a-689816124/" target="_blank" alt="Logo do Linkedin"><img id="icone" src="Linkedin-icon.png"/></a>
-            <a class="ft" href="https://github.com/Sabrinadelpache" target="_blank" alt="ícone do GitHub"><img id="icone" src="Github-icon.png"/></a>
-        <span class="sf">Made w/ love and creativity</span>
+            <a name="contato" href="https://www.linkedin.com/in/sabrina-a-689816124/" target="_blank"><img class="icone" src="Linkedin-icon.png"  alt="Logo do Linkedin"/></a>
+            <a href="https://github.com/Sabrinadelpache" target="_blank"><img class="icone" src="Github-icon.png"  alt="ícone do GitHub"/></a>
+        <span class="sf">Made with love and effort</span>
     </footer>
 </body>
 </html> 
