--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
 <body>
   <header id="cabecalho">
     <div id="banner">
+      <h1 id="titulo">Lições Aprendidas - Trybe</h1>
       <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
       <a href="index.html">Home</a>
       <a href="https://github.com/marcusWittho" target="_blanck">GitHub</a>
     </div>
-    <h1 id="titulo">
-      Lições Aprendidas - Trybe
-    </h1>
   </header>
   <section id="licoes">
     <div id="headerLessons">
-      <h3 id="titulo-aprendidas">Lições aprendidas</h3>
-      <h3 id="titulo-aprender">Lições a aprender</h3>
+      <h2 id="titulo-aprendidas">Lições aprendidas</h2>
+      <h2 id="titulo-aprender">Lições a aprender</h2>
     </div>
     <ol id="licoes_aprendidas">
       <li>Unix & Bash</li>
@@ -68,7 +66,8 @@
 </body>
 <footer id="rodape">
   <p>
-    Todos os direitos reservados, <a href="http://github.com/marcusWittho"> Marcus Lima Witthoeft</a>.
+    Todos os direitos reservados.
   </p>
+  <a href="http://github.com/marcusWittho"> Marcus Lima Witthoeft</a>
 </footer>
 </html>
