--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Lessons Learned</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header id="cabecalho">
-      <h1 id="titulo">Lições Aprendidas</h1>
+      <img id="logo" src="assets/trybe-grd.jpeg" alt="logo da Trybe">
+      <h1 id="titulo">Projeto 01 | Lições Aprendidas</h1>
     </header>
     <main>
       <img
