--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div id="banner">
       <h1 id="titulo">Lições Aprendidas - Trybe</h1>
       <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
-      <a href="index.html">Home</a>
-      <a href="https://github.com/marcusWittho" target="_blanck">GitHub</a>
+      <nav id="menu">
+        <a href="index.html">Home</a>
+        <a href="https://github.com/marcusWittho" target="_blanck">GitHub</a>
+      </nav>
     </div>
   </header>
   <section id="licoes">
@@ -68,6 +70,6 @@
   <p>
     Todos os direitos reservados.
   </p>
-  <a href="http://github.com/marcusWittho"> Marcus Lima Witthoeft</a>
+  <a href="http://github.com/marcusWittho" target="_blanck"> Marcus Lima Witthoeft</a>
 </footer>
 </html>
