--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <title>Projeto 1 - Lições Aprendidas</title>
     </head>
     <body>
-        <header id "cabecalho">
-            <h1 id "titulo">Lições aprendidas - Trybe</h1>
+        <header id="cabecalho">
+            <h1 id="titulo">Lições aprendidas - Trybe</h1>
         </header>
     </body>
 </html>
