11- Adequar problemas na verificaçao semancica do site achecker.

--- a/index.html
+++ b/index.html
@@ -1,105 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Projeto HTML & CSS | Cleber Teixeira</title>
-</head>
-<body>
-  <header id="cabecalho">
-    <section>
-      <h1 id="titulo">Primeiro Projeto | HTML & CSS - Trybe! 🚀</h1>
-    </section>
-  </header>
-
-  <main>
-    <section id="foto">
-      <h2 id="cleber">Foto: Cleber Lopes Teixeira</h2>
-      <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/72811671?s=460&u=34008ff57b6cc2524ae87a154c1fe70ef90abe5c&v=4" alt="Cleber Teixeira - Turma 09">
-    </section>
-
-    <nav id="navegacao">
-      <table id="tabela">
-        <tr>
-          <th colspan="2">
-            <h3 id="titulo_tab">Acesse:</h3>
-          </th>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <strong>Saiba mais sobre a</strong> <a class="trybe" href="https://blog.betrybe.com/" target="_blank" rel="noopener noreferrer">Trybe</a>
-          </td>
-        </tr>
-        <tr>
-          <td class="celula1">
-            <img id="linkedin" src="https://edugoldcareers.files.wordpress.com/2013/07/linkedin-icon20small.png">
-          </td>
-          <td class="celula2">
-            <a class="trybe" href="https://www.linkedin.com/in/cleberlopesteixeira" target="_blank">Cleber Teixeira</a>
-          </td>
-        </tr>
-      </table>
-    </nav>
-
-    <section>
-      <div id="lista1" class="lista">
-        <h3>Lições aprendidas:</h3>
-        <ol id="licoes_aprendidas">
-          <li>Zoom</li>
-          <li>Linux</li>
-          <li>Unix</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>Slack</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Inteligência Emocional</li>
-          <li>Empatia</li>
-        </ol>
-      </div>
-
-      <div id="lista2" class="lista">
-        <h3>Lições a aprender:</h3>
-        <ul id="licoes_a_aprender">
-          <li>JavaScript</li>
-          <li>Lógica de Programação</li>
-          <li>Algoritmos</li>
-          <li>DOM</li>
-          <li>JavaScript ES6</li>
-          <li>Testes automatizados com Jest</li>
-          <li>React</li>
-          <li>Formulários com React</li>
-          <li>Metodologias Ágeis</li>
-          <li>+ Soft Skills</li>
-        </ul>
-      </div>
-    </section>
-
-    <article>
-      <h2>Minha experiência com a Trybe</h2>
-      <p>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="style.css">
+      <link rel="shortcut icon" href="images/trybe.png">
+      <title>Projeto HTML & CSS | Cleber Teixeira</title>
+  </head>
+  <body>
+    <header id="cabecalho" class="destaque gradiente">
+      <h1 id="titulo">Primeiro Projeto - HTML & CSS - Trybe! &#128640;</h1>
+    </header>
+    <img id="minha_foto" class="destaque" src="images/Cleber.png" alt="Cleber">
+    <img id="pc" class="preenchimento" src="images/pc.png" alt="">
+    <div id="lista1" class="lista preenchimento">
+      <h2>Lições aprendidas:</h2>
+      <ol id="licoes_aprendidas">
+        <li>Zoom</li>
+        <li>Linux</li>
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Slack</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Inteligência Emocional</li>
+        <li>Empatia</li>
+      </ol>
+    </div>
+    <img id="l_aprendidas" class="preenchimento" src="images/aprendidas.png" alt="">
+    <div id="lista2" class="lista preenchimento">
+      <h2>Lições a aprender:</h2>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Lógica de Programação</li>
+        <li>Algoritmos</li>
+        <li>DOM</li>
+        <li>JavaScript ES6</li>
+        <li>Testes automatizados com Jest</li>
+        <li>React</li>
+        <li>Formulários com React</li>
+        <li>Metodologias Ágeis</li>
+        <li>+ Soft Skills</li>
+      </ul>
+    </div>
+    <div>
+      <article id="aprendizado" class="preenchimento" >
+        <h2>Minha experiência com a Trybe</h2>
+        <p>
           Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico.
           Aqui não aprendemos somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos também
           valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas,
           e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida.
-          <em>Esta é a Trybe!</em> 😎👍
-      </p>
-    </article>
-
-
-    <aside>
-      <section>
+          <em>Esta é a Trybe!</em> &#128526;&#128077;
+        </p>
+      </article>
+    </div>
+    <img id="sucesso" class="preenchimento" src="images/sucesso.png" alt="">
+    <div id="div_section">
+      <section id="passagem_aprendizado" class="preenchimento">
         <h2>Minha evolução com HTML & CSS</h2>
         <p>
-          Até pouco tempo atrás minha páginas profissionais eu as estruturava de maneira muito amadora. Hoje com duas
-          semanas e meia de curso na Trybe consigo perceber uma evolução muito grande. Então o que posso dizer é:
-          <em>Vamo que vamo!!!</em> ✌️🚀 <em>#goTrybe</em>
+          Até pouco tempo atrás minhas páginas profissionais eu as estruturava de maneira muito amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma evolução muito grande. &#9996;&#128640; <em>#goTrybe</em>
         </p>
       </section>
+    </div>
+    <aside id="sobre" class="preenchimento">
+      <h2 id="title_aside">Sobre mim:</h2>
+      <table>
+        <tr>
+          <td><span class="negrito">Nome:</span></td>
+          <td>Cleber Lopes Teixeira</td>
+        </tr>
+        <tr>
+          <td><span class="negrito">Escola:</span></td>
+          <td>Trybe</td>
+        </tr>
+        <tr>
+          <td><span class="negrito">Turma:</span></td>
+          <td>09 - 2020</td>
+        </tr>
+        <tr>
+          <td><span class="negrito">Curso:</span></td>
+          <td>Desenvolvimento Web</td>
+        </tr>
+        <tr>
+          <td><span class="negrito">Módulo:</span></td>
+          <td>Introd. à HTML & CSS</td>
+        </tr>
+      </table>
     </aside>
 
-    <footer id="rodape"><em>Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09</em> ✌️🚀</footer>
-  </main>
-</body>
+    <nav id="navegacao">
+      <table>
+        <tr>
+          <td><a class="trybe" href="https://www.linkedin.com/in/cleberlopesteixeira" target="_blank"><img id="linkedin" alt="linkedin" src="images/linkedin.png"></a></td>
+          <td><a href="https://github.com/cleber-teixeira" target="_blank"><img id="gitHub" src="images/gitHub.png" alt="gitHub"></a></td>
+          <td><a class="trybe" href="https://blog.betrybe.com/" target="_blank"><img id="trybe" src="images/trybe.png" alt="blob_trybe"></a></td>
+        </tr>
+      </table>
+    </nav>
+    <footer id="rodape" class="destaque gradiente"><em>Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09</em> &#9996;&#128640;</footer>
+
+  </body>
 </html>
