--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
       <nav id="menu">
         <a href="index.html">Home</a>
-        <a href="https://github.com/marcusWittho" target="_blanck">GitHub</a>
+        <a href="https://github.com/marcusWittho" target="_blank">GitHub</a>
       </nav>
     </div>
   </header>
@@ -70,6 +70,6 @@
   <p>
     Todos os direitos reservados.
   </p>
-  <a href="http://github.com/marcusWittho" target="_blanck"> Marcus Lima Witthoeft</a>
+  <a href="http://github.com/marcusWittho" target="_blank"> Marcus Lima Witthoeft</a>
 </footer>
 </html>
