--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
         <aside>
             <section>
-                <p>A coisa mais fácil é falar sobre a Trybe, pois é um mix de emoções. Aqui vc encontra pessoas com os mesmos proprósitos que si ajudam o tempo todo. Para mim o ensino de qualidade si da através de; <strong>Mentoria e Metodologia</strong>. E nesses 2 requisitos a Trybe é minha primeira escolha.</p>
+                A coisa mais fácil é falar sobre a Trybe, pois é um mix de emoções. Aqui vc encontra pessoas com os mesmos proprósitos que si ajudam o tempo todo. Para mim o ensino de qualidade si da através de; <strong>Mentoria e Metodologia</strong>. E nesses 2 requisitos a Trybe é minha primeira escolha.
             </section>
         </aside>
-
+        <br><br>
         <table>
             <tr>
                 <th>agora</th>
@@ -63,7 +63,7 @@
     </main>
     <br><br>
     <footer id="rodape">
-    Copyright - <a href="https://www.linkedin.com/in/renato-benage-88968ba6/" target="_blank">Renato Benage</a> 
+    <a href="https://www.linkedin.com/in/renato-benage-88968ba6/" target="_blank">Renato Benage</a> 
     </footer>
 
 </body>
