--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </section>
-        <article>
+        <article class="lado-esquerdo">
             <h2>O que aprendi na Trybe?</h2>
             <p>Apesar de pouco tempo estudando na Trybe, já aprendi e relembrei bastantes assuntos.
                 <br><br>
@@ -78,10 +78,12 @@
                 No terceiro bloco revisei e aprende pequenos novos detalhes a respeito de HTML e CSS; mas a parte mais legal sem duvidas é o primeiro projeto que estou realizando.
             </p>
         </article>
-        <aside>
-            <h2>Passagem sobre aprendizado</h2>
-            <p>Estou concluindo o meu primeiro mês de estudo na Trybe, já estudei: Unix, Bash, Sheel Script, Git, Git Hub, Internet, HTML, CSS e HTML semático.</p>
-        </aside>
+        <section class="lado-direito">
+            <aside>
+                <h2>Passagem sobre aprendizado</h2>
+                <p>Estou concluindo o meu primeiro mês de estudo na Trybe, já estudei: Unix, Bash, Sheel Script, Git, Git Hub, Internet, HTML, CSS e HTML semático.</p>
+            </aside>
+        </section>
         <footer id="rodape">
             <p>Desenvolvido por: Maximilian Kaden</p>
             <a href="https://www.linkedin.com/in/maximilian-kaden-a48bb0a1/" target="_blank">Clique aqui para saber mais</a>
