--- a/index.html
+++ b/index.html
@@ -172,10 +172,13 @@
     <nav>
       <table>
         <tr>
-          <th>Vamos nos conectar?</th>
+          <th>Vamos nos </th>
+          <th>conectar?</th>
         </tr>
         <tr>
-          <td>LinkedIn</td>
+          <td>
+            <a href="https://www.instagram.com/kvnfraga/" target="_blank"><img class="icon" src="assets/instagram.jpeg" alt="ícone do instagram"></a>
+          </td>
           <td>
             <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank"
               ><img
@@ -186,7 +189,7 @@
           </td>
         </tr>
         <tr>
-          <td>GitHub</td>
+          <td><a href="https://twitter.com/Kvn_Frg" target="_blank"></a><img class="icon" src="assets/twitter.png" alt="ícone do twitter"></td>
           <td>
             <a href="https://github.com/KevinFraga" target="_blank"
               ><img class="icon" src="assets/github.png" alt="ícone do github"
@@ -200,7 +203,7 @@
         Criado por
         <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank"
           >Kevin Fraga</a
-        >.
+        >, em Novembro de 2020.
       </p>
     </footer>
   </body>
