--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
             <li>React Router</li>
         </ul>
 
-        <article>
-            <h2>O que é estudar na Trybe</h2>
-            <p>Sabe quando vc está querendo evoluir e deixar algo na sociedade mas se senti incapaz de encontrar e seguir um norte? Era assim que me sentia antes da Trybe. A frase que mais resume esta Instituição de Ensino para mim foi uma frase que o CEO, Matheus Goyas, disse numa entrevista ao criticar o ensino no Brasil: "Eu acho uma falta de respeito com o tempo dos estudantes". E o que mais se ouve do CEO Matheus Goyas é <strong>"qualidade"</strong>. E essa qualidade eu encontrei aqui na Trybe.</p>
-        </article>
+        <section>
+            <article><h2>O que é estudar na Trybe</h2>
+                <p>Sabe quando vc está querendo evoluir e deixar algo na sociedade mas se senti incapaz de encontrar e seguir um norte? Era assim que me sentia antes da Trybe. A frase que mais resume esta Instituição de Ensino para mim foi uma frase que o CEO, Matheus Goyas, disse numa entrevista ao criticar o ensino no Brasil: "Eu acho uma falta de respeito com o tempo dos estudantes". E o que mais se ouve do CEO Matheus Goyas é <strong>"qualidade"</strong>. E essa qualidade eu encontrei aqui na Trybe.</p>
+            </article>
 
-        <aside class="right-side">
-            <section>
-                A coisa mais fácil é falar sobre a Trybe, pois é um mix de emoções. Aqui vc encontra pessoas com os mesmos proprósitos que si ajudam o tempo todo. Para mim o ensino de qualidade si da através de; Mentoria e Metodologia. E nesses 2 requisitos a Trybe é minha primeira escolha.
-            </section>
-        </aside>
+            <aside>
+                <p>A coisa mais fácil é falar sobre a Trybe, pois é um mix de emoções. Aqui vc encontra pessoas com os mesmos proprósitos que si ajudam o tempo todo. Para mim o ensino de qualidade si da através de; Mentoria e Metodologia. E nesses 2 requisitos a Trybe é minha primeira escolha.</p>
+            </aside>
+        </section>
         <br><br>
-        <table>
+        <section>
+            <table>
             <tr>
                 <th>agora</th>
                 <th>depois</th>
@@ -58,12 +58,13 @@
                 <th>#VQV</th>
                 <th>Agora</th>
             </tr>
-        </table>
+            </table>
+        </section>
 
     </main>
     <br><br>
     <footer id="rodape">
-    <a href="https://www.linkedin.com/in/renato-benage-88968ba6/" target="_blank">Renato Benage</a> 
+        <a href="https://www.linkedin.com/in/renato-benage-88968ba6/" target="_blank">Renato Benage</a> 
     </footer>
 
 </body>
