--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <title>Project Lessons Learned</title>
 </head>
 
-<body></body>
+<body>
+    <header id="cabecalho">
+        <h1 id="titulo">O que aprendi na Trybe! (até agora)</h1>
+    </header>
+</body>
 </html>
