--- a/index.html
+++ b/index.html
@@ -16,5 +16,21 @@
             </nav>
         </header>
         <img id="minha_foto" src="MatheusSchreiner.jpg" alt="Foto de Matheus Rubi">
+        <main>
+            <section>
+                <ol id="licoes_aprendidas">
+                    <li>Soft Skills</li>
+                    <li>Colaboração</li>
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Fundamentos Web</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                </ol>
+            </section>
+        </main>
     </body>
 </html>
