--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img id="minha_foto" src="MatheusSchreiner.jpg" alt="Foto de Matheus Rubi">
         <main>
             <section>
+                <h2>Lições Aprendidas</h2>
                 <ol id="licoes_aprendidas">
                     <li>Soft Skills</li>
                     <li>Colaboração</li>
@@ -30,6 +31,21 @@
                     <li>CSS</li>
                     <li>Slack</li>
                 </ol>
+            </section>
+            <section>
+                <h2>Lições a Aprender</h2>
+                <ul id="licoes_a_aprender">
+                    <li>React</li>
+                    <li>Node</li>
+                    <li>JavaScript</li>
+                    <li>Banco de Dados</li>
+                    <li>Lógica de Programação</li>
+                    <li>Python</li>
+                    <li>DOM</li>
+                    <li>Estrutura de Dados</li>
+                    <li>Ciência da Computação</li>
+                    <li>SQL</li>
+                </ul>
             </section>
         </main>
     </body>
