--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <header id="cabecalho">
         <h1 id="titulo">O que aprendi na Trybe! (até agora)</h1>
     </header>
+
+    <main>
+        <section id="sobre_o_autor">
+            <img id="minha_foto" src="renan.jpg" alt="Foto do autor Renan Costa">
+        </section>
+    </main>
 </body>
 </html>
