--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <h1 id="titulo">Lições aprendidas - Trybe</h1>
             <nav>
                 <ul>
-                    <li><a href="https://github.com/MatheusSchreiner" target="_blank">GitHub</a></li>
-                    <li><a href="https://www.https://www.linkedin.com/in/matheus-schreiner-7732a61bb/" target="_blank">Linkedin/a></li>
+                    <li><a href="https://www.github.com/MatheusSchreiner" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/matheus-schreiner-7732a61bb/" target="_blank">Linkedin</a></li>
                 </ul>
             </nav>
         </header>
