--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         </header>
         <img id="minha_foto" src="MatheusSchreiner.jpg" alt="Foto de Matheus Rubi">
         <main>
+            <article>
+                Área reservada para escrever um artigo sobre mim, assim que eu conseguir pensar em algo rs,
+                até lá deixarei apenas mensagens que levo comigo, 1 - Alegria é um sentimento momentâneo, Felicidade é equilíbrio de espírito;
+                2 - Seu problema tem solução? Sim, então não tem com o que se preocupar.
+                Seu problema tem solulção? Não, então também não tem o por que se preocupar. 3 - Último e mais importante, faça o que te faz feliz, foda-se o resto rs.
+            </article>
             <section>
                 <h2>Lições Aprendidas</h2>
                 <ol id="licoes_aprendidas">
