--- a/index.html
+++ b/index.html
@@ -23,36 +23,38 @@
                 2 - Seu problema tem solução? Sim, então não tem com o que se preocupar.
                 Seu problema tem solulção? Não, então também não tem o por que se preocupar. 3 - Último e mais importante, faça o que te faz feliz, foda-se o resto rs.
             </article>
-            <section>
-                <h2>Lições Aprendidas</h2>
-                <ol id="licoes_aprendidas">
-                    <li>Soft Skills</li>
-                    <li>Colaboração</li>
-                    <li>Unix</li>
-                    <li>Bash</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Fundamentos Web</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Slack</li>
-                </ol>
-            </section>
-            <section>
-                <h2>Lições a Aprender</h2>
-                <ul id="licoes_a_aprender">
-                    <li>React</li>
-                    <li>Node</li>
-                    <li>JavaScript</li>
-                    <li>Banco de Dados</li>
-                    <li>Lógica de Programação</li>
-                    <li>Python</li>
-                    <li>DOM</li>
-                    <li>Estrutura de Dados</li>
-                    <li>Ciência da Computação</li>
-                    <li>SQL</li>
-                </ul>
-            </section>
+            <aside>
+                <section>
+                    <h2>Lições Aprendidas</h2>
+                    <ol id="licoes_aprendidas">
+                        <li>Soft Skills</li>
+                        <li>Colaboração</li>
+                        <li>Unix</li>
+                        <li>Bash</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>Fundamentos Web</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Slack</li>
+                    </ol>
+                </section>
+                <section>
+                    <h2>Lições a Aprender</h2>
+                    <ul id="licoes_a_aprender">
+                        <li>React</li>
+                        <li>Node</li>
+                        <li>JavaScript</li>
+                        <li>Banco de Dados</li>
+                        <li>Lógica de Programação</li>
+                        <li>Python</li>
+                        <li>DOM</li>
+                        <li>Estrutura de Dados</li>
+                        <li>Ciência da Computação</li>
+                        <li>SQL</li>
+                    </ul>
+                </section>
+            </aside>
         </main>
         <footer id="rodape"></footer>
     </body>
