--- a/index.html
+++ b/index.html
@@ -16,6 +16,34 @@
         <section id="sobre_o_autor">
             <img id="minha_foto" src="renan.jpg" alt="Foto do autor Renan Costa">
         </section>
+
+        <section id="lessons">
+            <ol id="licoes_aprendidas">
+                <li>Cooperação: a importância do trabalho em equipe</li>
+                <li>Empatia VS simpatia</li>
+                <li>Cuidado: não seja um impostor</li>
+                <li>Unix & Bash</li>
+                <li>Git</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>Slack</li>
+                <li>Visual Studio Code</li>
+            </ol>
+
+            <ul id="licoes_a_aprender">
+                <li>React</li>
+                <li>Database</li>
+                <li>LinkedIn</li>
+                <li>Scrum</li>
+                <li>Mais sobre Javascript</li>
+                <li>Python</li>
+                <li>Programação Orientada a Objetos</li>
+                <li>Estrutura de Dados</li>
+                <li>Redes de Computadores</li>
+                <li>Arquitetura de Computadores</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
