--- a/index.html
+++ b/index.html
@@ -45,5 +45,10 @@
             </ul>
         </section>
     </main>
+
+    <footer id="rodape">
+        Feito pelo Autor: Renan Costa (iniciando a jornada rumo à Programação!);
+        <a href="https://github.com/renancosta21" target="_blank">Meu perfil no Github</a>
+    </footer>
 </body>
 </html>
