Styling the shadows

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
     <nav>
       <table>
         <tr>
-          <th>Vamos nos </th>
-          <th>conectar?</th>
+          <th>Vamos</th>
+          <th> nos conectar?</th>
         </tr>
         <tr>
           <td>
