Tentando fazer os requisitos bonus

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         </header>
         <img id="minha_foto" src="MatheusSchreiner.jpg" alt="Foto de Matheus Rubi">
         <main>
-            <article>
+            <article class="lado-esquerdo">
                 Área reservada para escrever um artigo sobre mim, assim que eu conseguir pensar em algo rs,
                 até lá deixarei apenas mensagens que levo comigo, 1 - Alegria é um sentimento momentâneo, Felicidade é equilíbrio de espírito;
                 2 - Seu problema tem solução? Sim, então não tem com o que se preocupar.
                 Seu problema tem solulção? Não, então também não tem o por que se preocupar. 3 - Último e mais importante, faça o que te faz feliz, foda-se o resto rs.
             </article>
+            <section class="lado-direito">Desculpe, mas eu realmente não estou inspirado hoje para escrever, mas voltarei para deixar tudo lindo e dentro dos conformes!!! </section>
             <aside>
                 <section>
                     <h2>Lições Aprendidas</h2>
@@ -55,7 +56,26 @@
                     </ul>
                 </section>
             </aside>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Blocos Finalizados</th>
+                        <tr>
+                            <td>01</td>
+                            <td>Unix, Bash e Shell Script</td>
+                        </tr>
+                        <tr>
+                            <td>02</td>
+                            <td>Git, Git Hub e Internet</td>
+                        </tr>
+                        <tr>
+                            <td>03</td>
+                            <td>Introdução a HTML e CSS</td>
+                        </tr>
+                    </tr>
+                </tbody>
+            </table>
         </main>
-        <footer id="rodape"></footer>
+        <footer id="rodape">Direitos Reservados</footer>
     </body>
 </html>
