--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     <main>
         <section id="sobre_o_autor">
             <img id="minha_foto" src="renan.jpg" alt="Foto do autor Renan Costa">
-            <article id="resumo_aprendizado">
-                Apaixonado pelo mundo tech, comecei a minha trajetória na Tecnologia da Informação ainda adolescente, fazendo montagem e formatação de computadores. Quando da escolha de um curso superior, acabei indo para o lado das ciências jurídicas e exerço a advocacia desde 2013.<br>Contudo, uma vez apaixonado por tecnologia, sempre apaixonado por tecnologia. Assim, em 2020, decidi encarar um novo desafio: fazer o curso de desenvolvimento web na Trybe! #VQV
+            <article id="resumo_aprendizado">Apaixonado pelo mundo tech, comecei a minha trajetória na Tecnologia da Informação ainda adolescente, fazendo montagem e formatação de computadores. Quando da escolha de um curso superior, acabei indo para o lado das ciências jurídicas e exerço a advocacia desde 2013.<br>Contudo, uma vez apaixonado por tecnologia, sempre apaixonado por tecnologia. Assim, em 2020, decidi encarar um novo desafio: fazer o curso de desenvolvimento web na Trybe! #VQV
             </article>
 
-            <aside id="sobre_o_aprendizado">
-                O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias. Ok, mas e daí ?<br>Bom, é difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo! Estou muito satisfeito e empolgado com a Trybe! =D<br> 
+            <aside id="sobre_o_aprendizado">O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias. Ok, mas e daí ?<br>Bom, é difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo! Estou muito satisfeito e empolgado com a Trybe! =D<br> 
 
             </aside>
         </section>
