--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">O que aprendi na Trybe! (até agora)</h1>
+        <nav>
+            <a href="#sobre_o_autor">Sobre o autor</a>
+            <a href="#rodape">Redes Sociais</a>
+        </nav>
     </header>
 
     <main>
         <section id="sobre_o_autor">
             <img id="minha_foto" src="renan.jpg" alt="Foto do autor Renan Costa">
-            <article id="resumo_aprendizado">Apaixonado pelo mundo tech, comecei a minha trajetória na Tecnologia da Informação ainda adolescente, fazendo montagem e formatação de computadores. Quando da escolha de um curso superior, acabei indo para o lado das ciências jurídicas e exerço a advocacia desde 2013.<br>Contudo, uma vez apaixonado por tecnologia, sempre apaixonado por tecnologia. Assim, em 2020, decidi encarar um novo desafio: fazer o curso de desenvolvimento web na Trybe! #VQV
+            <article id="resumo_aprendizado">
+                <h2>Sobre o autor</h2>
+                <p>Apaixonado pelo mundo tech, comecei a minha trajetória na Tecnologia da Informação ainda adolescente, fazendo montagem e formatação de computadores. Quando da escolha de um curso superior, acabei indo para o lado das ciências jurídicas e exerço a advocacia desde 2013.<br>Contudo, uma vez apaixonado por tecnologia, sempre apaixonado por tecnologia. Assim, em 2020, decidi encarar um novo desafio: fazer o curso de desenvolvimento web na Trybe! #VQV</p>
             </article>
 
-            <aside id="sobre_o_aprendizado">O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias. Ok, mas e daí ?<br>Bom, é difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo! Estou muito satisfeito e empolgado com a Trybe! =D<br> 
-
+            <aside id="sobre_o_aprendizado">
+                <h2>Sobre o aprendizado</h2>
+                <p>O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias. Ok, mas e daí ?<br>Bom, é difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo! Estou muito satisfeito e empolgado com a Trybe! =D</p>
             </aside>
         </section>
 
@@ -55,6 +62,7 @@
     <footer id="rodape">
         Feito pelo Autor: Renan Costa (iniciando a jornada rumo à Programação!);
         <a href="https://github.com/renancosta21" target="_blank">Meu perfil no Github</a>
+        <a href="https://instagram.com/renan.costa21" target="_blank">Meu perfil no Instagram</a>
     </footer>
 </body>
 </html>
