--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div id="ex_10">
       <h2>Cálculo do Custo</h2>
-      <h4>Informações do produto</h4>
+      <h3>Informações do produto</h3>
       <p>
         <label for="inCost">Insira o custo em R$: </label>
         <input type="text" id="inCost" class="aplyMargin">
@@ -84,7 +84,7 @@
         <input type="text" id="inSoldAmount" class="aplyMargin">
       </p>
       <input type="button" value="Calcular" id="btnCalc" class="aplyMargin">
-      <input type="button" value="Calcular" id="btnClean" class="aplyMargin">
+      <input type="button" value="Limpar" id="btnClean" class="aplyMargin">
       <p id="outProfit"></p>
     </div>
   </section>
