--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
         <section id="sobre_o_autor">
             <img id="minha_foto" src="renan.jpg" alt="Foto do autor Renan Costa">
         </section>
-        
         <article id="resumo_aprendizado">
             <h2>Sobre o autor</h2>
             <p>Apaixonado pelo mundo tech, comecei a minha trajetória na Tecnologia da Informação ainda adolescente, fazendo montagem e formatação de computadores. Quando da escolha de um curso superior, acabei indo para o lado das ciências jurídicas e exerço a advocacia desde 2013.<br>Contudo, uma vez apaixonado por tecnologia, sempre apaixonado por tecnologia. Assim, em 2020, decidi encarar um novo desafio: fazer o curso de desenvolvimento web na Trybe! #VQV</p>
         </article>
-
         <aside id="sobre_o_aprendizado">
             <h2>Sobre o aprendizado</h2>
             <p>O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias. Ok, mas e daí ?<br>Bom, é difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo! Estou muito satisfeito e empolgado com a Trybe! =D</p>
@@ -33,7 +31,7 @@
         
         <section id="lessons">
             <ol id="licoes_aprendidas">
-                <b>Lições Aprendidas:</b>
+                <strong>Lições Aprendidas:</strong>
                 <li>Cooperação: a importância do trabalho em equipe</li>
                 <li>Empatia VS simpatia</li>
                 <li>Cuidado: não seja um impostor</li>
@@ -47,7 +45,7 @@
             </ol>
 
             <ul id="licoes_a_aprender">
-                <b>Lições a Aprender:</b>
+                <strong>Lições a Aprender:</strong>
                 <li>React</li>
                 <li>Database</li>
                 <li>LinkedIn</li>
