--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </article>
         <aside id="sobre_o_aprendizado">
             <h2>Sobre o aprendizado</h2>
-            <p>O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias. Ok, mas e daí ?<br>Bom, é difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo! Estou muito satisfeito e empolgado com a Trybe! =D</p>
+            <p>O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias. É difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo!</p>
         </aside>
         
         <section id="lessons">
