Correcoes finais dos requisitos bonus e codeclimate

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
                 2 - Seu problema tem solução? Sim, então não tem com o que se preocupar.
                 Seu problema tem solulção? Não, então também não tem o por que se preocupar. 3 - Último e mais importante, faça o que te faz feliz, foda-se o resto rs.
             </article>
-            <section class="lado-direito">Desculpe, mas eu realmente não estou inspirado hoje para escrever, mas voltarei para deixar tudo lindo e dentro dos conformes!!! </section>
+            <section class="lado-direito">Desculpe, mas eu realmente não estou inspirado hoje para escrever, mas voltarei para deixar tudo lindo e dentro dos conformes, nem que eu passe o recesso inteiro estudando mas eu farei rs!!! </section>
             <aside>
-                <section>
                     <h2>Lições Aprendidas</h2>
                     <ol id="licoes_aprendidas">
                         <li>Soft Skills</li>
@@ -39,8 +38,6 @@
                         <li>CSS</li>
                         <li>Slack</li>
                     </ol>
-                </section>
-                <section>
                     <h2>Lições a Aprender</h2>
                     <ul id="licoes_a_aprender">
                         <li>React</li>
@@ -54,7 +51,6 @@
                         <li>Ciência da Computação</li>
                         <li>SQL</li>
                     </ul>
-                </section>
             </aside>
             <table>
                 <tbody>
