--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <title>Project Lessons Learned</title>
 </head>
 
@@ -26,7 +28,7 @@
         </article>
         <aside id="sobre_o_aprendizado">
             <h2>Sobre o aprendizado</h2>
-            <p>O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias. É difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo!</p>
+            <p>O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias.<br>É difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo!</p>
         </aside>
         
         <section id="lessons">
